--- a/Formulario-02/formulario.html
+++ b/Formulario-02/formulario.html
@@ -30,6 +30,8 @@
                 <label for="mensagem">Mensagem</label>
                 <textarea id="mensagem" name="mensagem" maxlength="800" required placeholder="Escreva sua mensagem"></textarea>
             </div>
+         <div class="botoes"></div>
+            <button type="submit" class="formulario__botao--enviar">Enviar</button>
             <button type="submit" class="formulario__botao--enviar">Enviar</button>
         </form>
     </div>
